--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "framer-motion": "^12.23.18",
     "geist": "latest",
     "input-otp": "1.4.1",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.454.0",
     "motion": "^12.23.18",
     "next": "15.5.3",
