--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@supabase/supabase-js": "latest",
     "@vercel/analytics": "latest",
     "autoprefixer": "^10.4.20",
+    "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
@@ -54,6 +55,7 @@
     "motion": "^12.23.18",
     "next": "15.5.3",
     "next-themes": "latest",
+    "nodemailer": "^7.0.9",
     "react": "^18",
     "react-day-picker": "latest",
     "react-dom": "^18",
@@ -70,7 +72,9 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.9",
+    "@types/bcryptjs": "^2.4.6",
     "@types/node": "^22",
+    "@types/nodemailer": "^7.0.2",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8.5",
